--- a/src/components/layout/LayerHeader/index.less
+++ b/src/components/layout/LayerHeader/index.less
@@ -3,5 +3,15 @@
   height: 64px;
   display: flex;
   justify-content: space-between;
+  .headerLeft{
+    .logo{
+      display:inline-block;
+      width: 55px;
+      height: 55px;
+      line-height: 55px;
+      background: url("../../../style/imgs/logoCricle.png") no-repeat;
+      background-size: 100% 100%;
+    }
+  }
 
 }
