--- a/src/components/layout/LayerHeader/index.css
+++ b/src/components/layout/LayerHeader/index.css
@@ -1,1 +1,54 @@
-.LayerHeader{width:100%;height:64px;display:flex;justify-content:space-between}
+.LayerHeader {
+  color: #fff;
+  width: 100%;
+  height: 64px;
+  display: flex;
+  justify-content: space-between;
+}
+.LayerHeader .ant-select-selection {
+  background: #213C95;
+  border: none;
+  color: #fff;
+}
+.LayerHeader .ant-select-arrow {
+  color: #fff;
+}
+.LayerHeader .headerLeft {
+  display: flex;
+  align-items: center;
+}
+.LayerHeader .headerLeft .logo {
+  width: 40px;
+  height: 40px;
+  background: url("../../../style/imgs/logoCricle.png") no-repeat;
+  background-size: 100% 100%;
+}
+.LayerHeader .headerLeft .logoFont {
+  width: 70px;
+  height: 28px;
+  background: url("../../../style/imgs/logonfont.png") no-repeat;
+  background-size: 100% 100%;
+  margin-left: 16px;
+}
+.LayerHeader .headerLeft .secant {
+  width: 2px;
+  height: 32px;
+  background: #132356;
+  margin: 0 20px;
+}
+.LayerHeader .headerLeft .logo-title {
+  font-size: 27px;
+  letter-spacing: 2px;
+}
+.LayerHeader .headerRight {
+  display: flex;
+  align-items: center;
+}
+.LayerHeader .headerRight .header-right {
+  width: 36px;
+  height: 36px;
+  background: url("../../../style/imgs/shield.png") no-repeat;
+  background-size: 100% 100%;
+  margin-right: 20px;
+}
+/*# sourceMappingURL=index.css.map */
