--- a/src/components/layout/LayerHeader/index.less
+++ b/src/components/layout/LayerHeader/index.less
@@ -1,16 +1,53 @@
 .LayerHeader{
+  .ant-select-selection{
+    background: #213C95;
+    border: none;
+    color: #fff;
+  }
+  .ant-select-arrow{
+    color: #fff;
+  }
+  color: #fff;
   width: 100%;
   height: 64px;
   display: flex;
   justify-content: space-between;
   .headerLeft{
+    display: flex;
+    align-items: center;
     .logo{
-      display:inline-block;
-      width: 55px;
-      height: 55px;
-      line-height: 55px;
+      width: 40px;
+      height: 40px;
       background: url("../../../style/imgs/logoCricle.png") no-repeat;
       background-size: 100% 100%;
+    }
+    .logoFont{
+      width: 70px;
+      height: 28px;
+      background: url("../../../style/imgs/logonfont.png") no-repeat;
+      background-size: 100% 100%;
+      margin-left: 16px;
+    }
+    .secant{
+      width: 2px;
+      height: 32px;
+      background: #132356;
+      margin: 0 20px;
+    }
+    .logo-title{
+      font-size: 27px;
+      letter-spacing:2px;//字体间隙
+    }
+  }
+  .headerRight{
+    display: flex;
+    align-items: center;
+    .header-right{
+      width: 36px;
+      height: 36px;
+      background: url("../../../style/imgs/shield.png") no-repeat;
+      background-size: 100% 100%;
+      margin-right: 20px;
     }
   }
 
