--- a/src/style/css/common.css
+++ b/src/style/css/common.css
@@ -1,1 +1,152 @@
-.ajax-loading{display:none}.ajax-loading .loading{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:0 40px;height:80px;line-height:80px;background:rgba(0,0,0,.75);border-radius:6px;text-align:center;z-index:9999;font-size:16px;color:#fff}.ajax-loading .loading img{width:32px;vertical-align:middle}.ajax-loading .loading span{margin-left:12px}.ajax-loading .overlay{position:fixed;left:0;right:0;top:0;bottom:0;z-index:9998;background:#fff;opacity:.1}body{margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}code{font-family:source-code-pro,Menlo,Monaco,Consolas,"Courier New",monospace}img{width:100%}.App{height:100%}.ant-pagination.PaginationRight{float:right;margin:16px auto}.ant-table-tbody>tr:nth-child(odd){background:#E0EEF7}.ant-table-tbody>tr:nth-child(even){background:#F6FAFA}.tableoption{display:flex;flex-wrap:wrap;justify-content:space-around}.tableoption span{cursor:pointer}.bluecolor{color:#40a9ff}.redcolor{color:#f5222d}.greencolor{color:#1ECD6E}.bluebg{background:#40a9ff}.redbg{background:#f5222d}.greenbg{background:#1ECD6E}.selectForm{display:flex;justify-content:space-between}.state-bg-not{display:inline-block;width:80px;text-align:center;border-radius:10px;color:#fff;background:#F76F49}.state-bg-normal{display:inline-block;width:80px;text-align:center;border-radius:10px;color:#fff;background:#1AA97B}.state-bg-abandoning{display:inline-block;width:80px;text-align:center;border-radius:10px;color:#fff;background:#E84C3D}.btn-abandoning{background-color:#E84C3D!important;color:#fff!important}.btn-binding{background-color:#F76F49!important;color:#fff!important;border:none!important}::-webkit-scrollbar{width:10px;height:16px;background-color:#F5F5F5}::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);border-radius:10px;background-color:#F5F5F5}::-webkit-scrollbar-thumb{border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);background-color:#555}
+.ajax-loading {
+  display: none;
+}
+.ajax-loading .loading {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0 40px;
+  height: 80px;
+  line-height: 80px;
+  background: rgba(0, 0, 0, 0.75);
+  border-radius: 6px;
+  text-align: center;
+  z-index: 9999;
+  font-size: 16px;
+  color: #fff;
+}
+.ajax-loading .loading img {
+  width: 32px;
+  vertical-align: middle;
+}
+.ajax-loading .loading span {
+  margin-left: 12px;
+}
+.ajax-loading .overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 9998;
+  background: #ffffff;
+  opacity: 0.1;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+img {
+  width: 100%;
+}
+.App {
+  height: 100%;
+}
+.ant-pagination.PaginationRight {
+  float: right;
+  margin: 16px auto;
+}
+.ant-table-tbody > tr:nth-child(odd) {
+  background: #E0EEF7;
+}
+.ant-table-tbody > tr:nth-child(even) {
+  background: #F6FAFA;
+}
+.tableoption {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.tableoption span {
+  cursor: pointer;
+}
+.bluecolor {
+  color: #40a9ff;
+}
+.redcolor {
+  color: #f5222d;
+}
+.greencolor {
+  color: #1ECD6E;
+}
+.bluebg {
+  background: #40a9ff;
+}
+.redbg {
+  background: #f5222d;
+}
+.greenbg {
+  background: #1ECD6E;
+}
+.selectForm {
+  display: flex;
+  justify-content: space-between;
+}
+/*状态——未生效*/
+.state-bg-not {
+  display: inline-block;
+  width: 80px;
+  text-align: center;
+  border-radius: 10px;
+  color: #fff;
+  background: #F76F49;
+}
+/*状态——正常*/
+.state-bg-normal {
+  display: inline-block;
+  width: 80px;
+  text-align: center;
+  border-radius: 10px;
+  color: #fff;
+  background: #1AA97B;
+}
+/*状态——弃用*/
+.state-bg-abandoning {
+  display: inline-block;
+  width: 80px;
+  text-align: center;
+  border-radius: 10px;
+  color: #fff;
+  background: #E84C3D;
+}
+/*按钮——弃用*/
+.btn-abandoning {
+  background-color: #E84C3D !important;
+  color: #fff !important;
+}
+/*按钮——绑定*/
+.btn-binding {
+  background-color: #F76F49 !important;
+  color: #fff !important;
+  border: none!important;
+}
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+::-webkit-scrollbar {
+  width: 10px;
+  height: 16px;
+  background-color: #F5F5F5;
+}
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+.Main .Content {
+  background: #F8F8F8 !important;
+  padding: 0!important;
+}
+/*# sourceMappingURL=common.css.map */
