--- a/src/style/css/common.less
+++ b/src/style/css/common.less
@@ -104,4 +104,7 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: #555;
 }
-
+.Main .Content{
+  background: #F8F8F8!important;
+  padding: 0!important;
+}
