--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -35,7 +35,16 @@
     background: rgba(36, 52, 74, 0.3);
     width: 100%;
     padding: 1px 4px;
+
     //  margin: 0;
+    .titpoint {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      background: #fe7200;
+      border-radius: 5px;
+      margin: 0 10px;
+    }
   }
 
   .ant-card-actions>li {
