--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -31,15 +31,14 @@
           color: #354D9D;
           font-weight: bold;
           font-size: 15px;
+          padding-bottom: 4px;
         }
         .equipTotal{
           color: #385BD1;
-          font-weight: bolder;
           letter-spacing: 1px;
         }
         .equipTotal-today{
           color: #FF7200;
-          font-weight: bolder;
           letter-spacing: 1px;
         }
       }
@@ -61,22 +60,20 @@
         }
         .equipName{
           color: #354D9D;
-          font-weight: bold;
           font-size: 15px;
+          font-weight: bolder;
+          padding-bottom: 4px;
         }
         .equipTotal{
           color: #385BD1;
-          font-weight: bolder;
           letter-spacing: 1px;
         }
         .equipTotal-Handle{
           color: #1877FF;
-          font-weight: bolder;
           letter-spacing:1px;
         }
         .equipTotal-UHandle{
           color: #656A7B;
-          font-weight: bolder;
           letter-spacing: 1px;
         }
       }
@@ -135,7 +132,6 @@
             display: flex;
             align-items: center;
             margin: 28px 55px;
-            font-weight: bolder;
             .status1{
               color: #ff7200;
               margin-left: 12px;
@@ -172,7 +168,7 @@
           }
         }
         .computer{
-          width: 62%;
+          width: 55%;
         }
       }
 
@@ -301,6 +297,7 @@
           background-color: #006CFF;
           color: #fff;
           margin: 10px 0;
+          font-size: 14px;
         }
         .defendedBtn1{
           width: 40%;
@@ -310,6 +307,7 @@
           background-color: #FF7200;
           color: #fff;
           margin: 10px 0;
+          font-size: 14px;
         }
       }
       .lastAlarm{
@@ -367,6 +365,7 @@
               }
               .alarmVideoName{
                 color: #fff;
+                font-size: 14px;
               }
             }
           }
@@ -422,6 +421,7 @@
         }
         .alarminforFont{
           color: #fff;
+          font-size: 14px;
         }
       }
     }
