--- a/src/components/login/index.less
+++ b/src/components/login/index.less
@@ -1,4 +1,45 @@
 .Login{
+  .ant-input-affix-wrapper{
+    height: 40px;
+  }
+  .login-title{
+    width: 15%;
+    height: 100px;
+    background: url("../../style/imgs/logo.png") no-repeat;
+    background-size: 100%;
+  }
+  .logoBor{
+    position: relative;
+    .logoBg{
+      width: 100%;
+      height: 60vh;
+      background: url("../../style/imgs/login.png") no-repeat left 50%;
+      background-size: 100% 100%;
+    }
+    .loginFrame{
+      position: absolute;
+      top:32%;
+      left: 61%;
+      width: 22%;
+      height: 46vh;
+      background: #fff;
+      box-shadow: 0px 0px 10px rgba(34, 34, 34, 0.1);
+      padding: 30px 50px;
+      .logoForm{
+        padding-top: 30px;
+        .logoBtn{
+          width: 100%;
+          height: 40px;
+          background:#006CFF;
+          border: none;
+          border-radius: 1px;
+        }
+      }
+    }
+    .loginFrame p{
+      color: #4A4A4A;
+    }
+  }
 
 
 }
