--- a/src/style/jhy/less/overview.less
+++ b/src/style/jhy/less/overview.less
@@ -129,11 +129,21 @@
 
 
   .botwrap {
-    border: 1px solid;
 
     .ant-list-split .ant-list-item {
       border: 1px solid #f0f0f0;
       margin-top: 5px;
+
+      .ant-radio-wrapper {
+        width: 100%;
+        position: relative;
+
+        .ant-radio {
+          position: absolute;
+          right: 0;
+          top: 4px;
+        }
+      }
     }
   }
 
