--- a/src/style/jhy/less/netset.less
+++ b/src/style/jhy/less/netset.less
@@ -1,1 +1,35 @@
-.netset {}
+.netset {
+  padding: 30px;
+  background: #f8f8f8;
+
+  .netcard {
+    background: #006cff;
+    color: #fff;
+  }
+
+  .optwrap {
+    width: 100%;
+    text-align: center;
+
+    .submit {
+      background: #4a96fd;
+      color: #fff;
+    }
+
+    .cancle {
+      margin-left: 50px;
+      background: #a4a7b1;
+      color: #fff;
+    }
+  }
+
+
+  .ant-form-item-children {
+    .input {
+      background: #f3f3f5 !important;
+    }
+  }
+
+
+
+}
