--- a/src/style/jhy/less/timeset.less
+++ b/src/style/jhy/less/timeset.less
@@ -1,1 +1,19 @@
-.timeset {}
+.timeset {
+  padding: 30px;
+
+  .optwrap {
+    width: 100%;
+    text-align: center;
+
+    .submit {
+      background: #4a96fd;
+      color: #fff;
+    }
+
+    .cancle {
+      margin-left: 50px;
+      background: #a4a7b1;
+      color: #fff;
+    }
+  }
+}
