--- a/src/style/jhy/less/netset.less
+++ b/src/style/jhy/less/netset.less
@@ -2,9 +2,16 @@
   padding: 30px;
   background: #f8f8f8;
 
+  .ant-form-item {
+    margin-bottom: 0;
+  }
+
   .netcard {
+    display: inline-block;
     background: #006cff;
     color: #fff;
+    padding: 5px 20px;
+    margin-bottom: 10px;
   }
 
   .optwrap {
@@ -30,6 +37,9 @@
     }
   }
 
+  .cardtwo {
+    margin-top: 20px;
+  }
 
 
 }
