--- a/src/style/jhy/less/overview.less
+++ b/src/style/jhy/less/overview.less
@@ -11,6 +11,10 @@
     font-size: 20px;
   }
 
+  .ant-descriptions.bordered .ant-descriptions-item-label {
+    background-color: transparent;
+  }
+
   .cpu::before,
   .physics::before,
   .disk::before,
@@ -34,7 +38,7 @@
   }
 
   .topwrap {
-    height: 36%;
+    height: 37%;
 
     .desc {
       margin-top: 10px;
