--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -1,4 +1,7 @@
 .equip {
+  height: 100%;
+  padding: 30px;
+  position: relative;
 
   .clearfix::after {
     content: '';
@@ -61,6 +64,12 @@
       height: 16px;
       margin-right: 10px;
     }
+  }
+
+  .pagination {
+    position: absolute;
+    bottom: 10px;
+    left: 28%;
   }
 
 }
