--- a/src/style/jhy/less/timeset.less
+++ b/src/style/jhy/less/timeset.less
@@ -1,6 +1,10 @@
 .timeset {
   padding: 30px;
 
+  .ant-form-item {
+    margin-bottom: 0;
+  }
+
   .optwrap {
     width: 100%;
     text-align: center;
