--- a/src/style/jhy/less/userinfo.less
+++ b/src/style/jhy/less/userinfo.less
@@ -1,6 +1,10 @@
 .userInfo {
-  .ant-btn .ant-btn-primary {
+  padding: 30px;
+
+  .addbtn {
     background: #006cff;
-    padding: 2px 4px;
+    padding: 5px 20px;
+    color: #fff;
+    box-sizing: content-box;
   }
 }
