--- a/src/style/css/common.less
+++ b/src/style/css/common.less
@@ -8,6 +8,16 @@
   float: right;
   margin:16px auto;
 }
+.ant-modal-close-x{
+  width: 38px!important;
+  height: 38px!important;
+  line-height: 38px!important;
+  color: #fff!important;
+}
+.ant-modal-close {
+  margin: 4px 4px;
+  background: #006ee2!important;
+}
 //表格隔行变色背景色
 .ant-table-tbody > tr:nth-child(odd) {
   background: #E0EEF7;
