--- a/src/components/homePage/homeModel.less
+++ b/src/components/homePage/homeModel.less
@@ -1,35 +1,155 @@
 .homePageModel{
   display: flex;
   flex-direction: row;
+  padding-top: 30px;
   .homePageModelLeft{
-    display: flex;
-    flex-direction: row;
-    .homeImg{
-      width: 280px;
+    border: 2px solid #EEEEEE;
+    margin-right: 10px;
+    .homeageImg{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      .homeImg{
+        width: 280px;
+        height: 258px;
+        margin-top: 20px;
+      }
+      .homeImg img{
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .nextHome{
+      display: flex;
+      justify-content: flex-end;
+      margin: 9px 8px;
+      .nextUp{
+        color: #B4B4B4;
+        padding: 0 4px;
+      }
+      .arrLeft{
+        width: 20px;
+        height: 20px;
+        line-height: 20px;
+        text-align: center;
+        background-color: #B3B3B3;
+        border-radius: 50%;
+        margin:0 8px;
+        .cicrle-icon{
+          color: #fff;
+        }
+      }
+      .arrRight{
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        line-height: 20px;
+        background-color: #B3B3B3;
+        border-radius: 50%;
+        .cicrle-icon{
+          color: #fff;
+        }
+      }
     }
   }
   .homePageModelRight{
     width: 480px;
-    margin-left: 10px;
-    .nameDevice{
-      width: 100%;
-      margin: 8px 0;
-      padding: 5px 0;
-      background: #F3F3F5;
-      color: #262D8D;
-      border: 1px solid #E4E4E6;
+    .deviceContext{
+      padding: 10px;
+      border: 2px solid #EEEEEE;
+      .sectorBtn{
+        display: inline-block;
+        width: 14px;
+        height: 14px;
+        line-height: 14px;
+        background-color: #fff;
+        border-radius: 50%;
+        margin-left: 8px;
+        .cicrle-icon{
+          color: #056BDD;
+          font-size: 10px;
+        }
+      }
+      .typePolice{
+        display: flex;
+        justify-content: space-between;
+      }
+      .typePolice span:nth-child(1){
+        padding-left: 8px;
+      }
+      .typePolice span:nth-child(3){
+        padding-right: 8px;
+      }
+      .nameDevice{
+        width: 100%;
+        margin: 8px 0;
+        padding: 5px 0;
+        background: #F3F3F5;
+        color: #262D8D;
+        border: 1px solid #E4E4E6;
+        .manAlarm{
+          border-right:1px solid #dedee2;
+          border-left:1px solid #dedee2;
+          padding: 0 15px;
+        }
+        .equName{
+          display: inline-block;
+          padding:0 8px 0 8px;
+          border-right:1px solid #dedee2;
+        }
+        .equTimes{
+          display: inline-block;
+          padding-left: 10px;
+        }
+      }
     }
-    .nameDevice span:nth-child(1){
-      display: inline-block;
-      padding-left: 2px;
+    .deviceContext Button{
+      background: #006EE2;
+      color: #fff;
+      border-radius: 20px;
+      font-size: 12px;
+      margin-top: 16px;
     }
-    .nameDevice span:nth-child(2){
-      display: inline-block;
-      padding-left: 12px;
-    }
-    .nameDevice span:nth-child(3){
-      display: inline-block;
-      padding-left: 30px;
+    .alarmImg{
+      display: flex;
+      flex-direction: row;
+      margin-top: 12px;
+      border: 1px solid #EEEEEE;
+      .alarBg{
+        width: 33%;
+        background-color: #fff;
+        margin: 8px 8px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-right: 1px solid #EEEEEE;
+        .policeImg{
+          width: 40px;
+          height: 40px;
+        }
+      }
+      .policeBtn{
+        width: 64%;
+        margin: 8px 3px;
+      }
+      .policeBtn Button{
+        width: 100%;
+        margin: 6px 0;
+      }
+      .policeBtn Button:nth-child(1){
+        background-color: #FF7200;
+        color: #fff;
+        border: none;
+        border-radius: 1px;
+      }
+      .policeBtn Button:nth-child(2){
+        background-color: #B28750;
+        color: #fff;
+        border: none;
+        border-radius: 1px;
+      }
     }
   }
 }
