--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -126,9 +126,30 @@
       .main-left-L{
         height: 360px;
         padding: 20px 20px 0 20px;
+        .swiper-container{
+          margin-top: 2px;
+          .prev{
+            position: absolute;
+            top: 24%;
+            left: 10px;
+            margin-top: -22px;
+            z-index: 10;
+            cursor: pointer;
+            color: #fff;
+          }
+          .next{
+            position: absolute;
+            top: 24%;
+            right:10px;
+            margin-top: -22px;
+            z-index: 10;
+            cursor: pointer;
+            color: #fff;
+          }
+        }
         .img-up-fu{
           width: 100%;
-          height: 100%;
+          height: 78%;
           background: url("../../style/imgs/testl.png") no-repeat;
           background-size:100% 100%;
           display: flex;
