--- a/src/style/jhy/less/userinfo.less
+++ b/src/style/jhy/less/userinfo.less
@@ -1,5 +1,18 @@
+.adduser {
+  color: red !important;
+
+  .ant-modal-confirm .ant-modal-confirm-btns {
+    text-align: center;
+    float: none;
+  }
+}
+
+
+
 .userInfo {
   padding: 30px;
+
+
 
   .addbtn {
     background: #006cff;
