--- a/src/components/layout/LayerHeader/index.less
+++ b/src/components/layout/LayerHeader/index.less
@@ -49,6 +49,10 @@
       background-size: 100% 100%;
       margin-right: 20px;
     }
+    .signout{
+      padding-left: 20px;
+      cursor: pointer;
+    }
   }
 
 }
