--- a/src/style/jhy/less/equipadd.less
+++ b/src/style/jhy/less/equipadd.less
@@ -12,17 +12,38 @@
   }
 
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
-    color: #fff !important;
+    color: #646464 !important;
     background: #e5e5e5 !important;
     height: 50px;
     width: 250px;
     text-align: center;
+
+
+    .camera {
+      background: url('../imgs/cameranot.png') no-repeat 4px;
+      padding-left: 60px;
+    }
+
+    .deftime {
+      background: url('../imgs/deftimenot.png') no-repeat 4px;
+      padding-left: 60px;
+    }
   }
 
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
     height: 50px;
     color: #fff !important;
     background: #006fe4 !important;
+
+    .camera {
+      background: url('../imgs/camera.png') no-repeat 4px;
+      padding-left: 60px;
+    }
+
+    .deftime {
+      background: url('../imgs/deftime.png') no-repeat 4px;
+      padding-left: 60px;
+    }
   }
 
   .ant-tabs {
