--- a/src/style/jhy/less/equipset.less
+++ b/src/style/jhy/less/equipset.less
@@ -1,5 +1,6 @@
-.equipadd {
+.equipset {
   height: 100%;
+  padding: 30px;
 
   .verhorcenter {
     display: flex;
@@ -160,42 +161,7 @@
       }
     }
 
-    .threshold {
-      border: 1px solid #eeeeee;
-      background: #f8f8f8;
 
-      .thresholdtit {
-        .verhorcenter;
-        height: 40px;
-        border-bottom: 1px solid #eeeeee;
-
-      }
-
-      .thresholesetWrap {
-        height: 80px;
-        .verhorcenter;
-
-        .thresholdlabel {
-          border: 1px solid #eeeeee;
-          text-align: center;
-          width: 20%;
-          padding: 4px;
-        }
-
-        .thresholdset {
-          width: 60%;
-
-        }
-
-        .thresholdrest {
-          border: 1px solid #eeeeee;
-          width: 10%;
-          text-align: center;
-          padding: 4px;
-
-        }
-      }
-    }
   }
 
 }
